--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
+spring.application.name: BoodCam
+#server config
 server.port=8443
 server.servlet.context-path=/EverisProyect
 
+#database config
 spring.jpa.database=POSTGRESQL
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
@@ -10,14 +13,15 @@ spring.datasource.username=postgres
 spring.datasource.password=1234
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
-
+# segurity config
 spring.security.user.name=everis
 spring.security.user.password=1234
 
-
-# segurity config
-#server.ssl.key-store-type = PKCS12
+#segurity https
 server.ssl.key-store = classpath:keystore.p12
 server.ssl.key-store-password = 123456789
 server.ssl.key-password = 123456789
 server.ssl.key-alias = tomcat
+
+#eureka client
+eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka
